<resources>
    <string name="app_name">iCU</string>
    <string name="splash_slogan">We guard. We Protect. We Secure</string>
    <string name="login_message">Sign in to continue</string>
    <string name="welcome">Welcome Back</string>
    <string name="txt_password">Password</string>
    <string name="txt_email">Email</string>
    <string name="title_login">Sign In</string>
    <string name="not_a_member_yet_sign_up">Not a member yet? Sign Up</string>
    <string name="register_welcome">Sign Up</string>
    <string name="register_message">All your security needs under one roof</string>
    <string name="txt_fName">First Name</string>
    <string name="txt_lName">Last Name</string>
    <string name="txt_phone">Phone</string>
    <string name="title_register">Sign up</string>
    <string name="login">Already a member? Sign In</string>
    <string name="home">Home</string>
    <string name="notifications">Notifications</string>
    <string name="emergency_contact">Emergency Contacts</string>
    <string name="ip_camera">IP Camera</string>
    <string name="title_sign_out">Sign Out</string>
    <string name="profile">Profile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="about_us">About us</string>
    <string name="about_us_detail">Our mission is to protect you and your family. We connect you to your camera from anywhere in the world. An immediate alert is sent if we detect suspicious behavior.</string>
    <string name="status">Status:</string>
    <string name="connected">Connected</string>
    <string name="burglar_alerts">Burglar alerts</string>
    <string name="number_of_alerts_for_this_month">Number of alerts for this month</string>
    <string name="emergency_contacts">Emergency contacts</string>
    <string name="burglar_alerts_count">Number of people we alert for you</string>
    <string name="view_surveillance">View Surveillance</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="nickname">Nickname</string>
    <string name="name">Name</string>
    <string name="delete">Delete</string>
    <string name="test_connection">Test Connection</string>
    <string name="address">Address</string>
    <string name="save">Save</string>
    <string name="burglar_detection">Burglar Detection:</string>
</resources>