<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_home"
            android:icon="@drawable/home"
            android:title="@string/home" />
        <item
            android:id="@+id/navigation_notification"
            android:icon="@drawable/bell"
            android:title="@string/notifications" />
        <item
            android:id="@+id/navigation_contacts"
            android:icon="@drawable/contacts"
            android:title="@string/emergency_contact" />
        <item
            android:id="@+id/navigation_devices"
            android:icon="@drawable/devices"
            android:title="@string/ip_camera" />
        <item
            android:id="@+id/navigation_profile"
            android:icon="@drawable/profile"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/signout"
            android:title="@string/title_sign_out"/>
    </group>
</menu>