<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="10dp"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".Activity.RegisterActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/register_logo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:transitionName="logo_image"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/logo_transparent"/>

    <TextView
        android:id="@+id/register_welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/register_welcome"
        android:textAllCaps="true"
        android:textColor="@color/dark"
        android:textSize="40sp"
        android:transitionName="logo_title" />

    <TextView
        android:id="@+id/register_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:transitionName="logo_slogan"
        android:textColor="@color/blue"
        android:textSize="20sp"
        android:text="@string/register_message" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_margin="20dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/register_firstName"
        android:hint="@string/txt_fName"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/person"
            android:drawablePadding="15dp"
            android:maxLength="25"
            android:inputType="text"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/register_lastName"
        android:hint="@string/txt_lName"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/person"
            android:drawablePadding="15dp"
            android:inputType="text"/>
    </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/register_phone"
            android:hint="@string/txt_phone"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/phone"
                android:maxLength="10"
                android:drawablePadding="15dp"
                android:inputType="phone"/>
        </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/register_email"
        android:hint="@string/txt_email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/email"
            android:drawablePadding="15dp"
            android:inputType="textEmailAddress"
            android:transitionName="email_trans"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:id="@+id/register_password"
        android:hint="@string/txt_password"
        app:passwordToggleEnabled="true"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/password"
            android:drawablePadding="15dp"
            android:inputType="textPassword"
            android:transitionName="password_trans"/>
    </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:elevation="20dp"
            android:textColor="@color/white"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:id="@+id/btnRegister"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/title_register"
            android:transitionName="confirm_transition"
            android:background="@drawable/round_buttons"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/btnGetLoggedIn"
            android:elevation="4dp"
            android:textColor="@color/secondary"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:focusable="true"
            android:clickable="true"
            android:text="@string/login"
            android:transitionName="login_reg_Btntransition"
            android:background="#00000000"/>
    </androidx.appcompat.widget.LinearLayoutCompat>
</LinearLayout>