<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="10dp"
    android:orientation="vertical"
    tools:context=".Activity.LoginActivity"
    android:background="@color/white">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/login_image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:transitionName="logo_image"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/logo_transparent"/>

    <TextView
        android:id="@+id/login_welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/welcome"
        android:textAllCaps="true"
        android:textColor="@color/mahogany"
        android:textSize="40sp"
        android:transitionName="logo_title" />

    <TextView
        android:id="@+id/login_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:transitionName="logo_slogan"
        android:textSize="20sp"
        android:textColor="@color/brown"
        android:text="@string/login_message" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_margin="20dp"
        android:orientation="vertical"
        android:layout_gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/login_email"
            android:hint="@string/txt_email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/email"
                android:drawablePadding="15dp"
                android:inputType="textEmailAddress"
                android:transitionName="email_trans"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:id="@+id/login_password"
            android:hint="@string/txt_password"
            app:passwordToggleEnabled="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/password"
                android:drawablePadding="15dp"
                android:inputType="textPassword"
                android:transitionName="password_trans"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:elevation="0dp"
            android:textColor="@color/white"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:id="@+id/btnLogin"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/title_login"
            android:transitionName="confirm_transition"
            android:background="@drawable/round_buttons"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/btnGetRegistered"
            android:elevation="4dp"
            android:textColor="@color/secondary"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:focusable="true"
            android:clickable="true"
            android:text="@string/not_a_member_yet_sign_up"
            android:transitionName="login_reg_Btntransition"
            android:background="#00000000"/>
    </androidx.appcompat.widget.LinearLayoutCompat>
</LinearLayout>