<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/profile_gradient"
    tools:context=".Fragment.EmergencyContactFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="30dp"
        android:scrollbars="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="75dp"
        android:layout_marginEnd="25dp"
        android:backgroundTint="@color/white"
        android:elevation="15dp"
        app:cardCornerRadius="15dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="30dp">

            <EditText
                android:id="@+id/contact_card_name"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_below="@id/contact_card_image"
                android:layout_marginTop="20dp"
                android:background="@color/light_grey"
                android:gravity="center"
                android:hint="@string/name"
                android:textColor="@color/dark"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/contact_card_nickname"
                android:layout_width="150dp"
                android:layout_height="45dp"
                android:layout_below="@id/contact_card_name"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:background="@color/light_grey"
                android:gravity="center"
                android:hint="@string/nickname"
                android:maxLength="10"
                android:textColor="@color/dark"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/contact_card_email"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_below="@id/contact_card_nickname"
                android:layout_marginTop="25dp"
                android:background="@color/light_grey"
                android:drawableStart="@drawable/email_icon"
                android:drawablePadding="25dp"
                android:hint="@string/txt_email"
                android:inputType="textEmailAddress"
                android:paddingStart="15dp"
                android:textColor="@color/dark"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/contact_card_phone"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_below="@id/contact_card_email"
                android:layout_marginTop="15dp"
                android:background="@color/light_grey"
                android:drawableStart="@drawable/phone"
                android:drawablePadding="25dp"
                android:hint="@string/txt_phone"
                android:inputType="phone"
                android:paddingStart="15dp"
                android:textColor="@color/dark"
                android:textSize="18sp" />


            <ImageView
                android:id="@+id/contact_card_image"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_below="@id/contact_card_title"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:src="@drawable/user" />

            <TextView
                android:id="@+id/contact_card_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/aladin"
                android:text="Edit Contact"
                android:textColor="@color/black"
                android:textSize="38sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnContactBack"
                android:layout_width="wrap_content"
                android:layout_height="55dp"
                android:layout_below="@id/contact_card_phone"
                android:layout_alignParentStart="true"
                android:layout_marginTop="35dp"
                android:backgroundTint="@color/secondary"
                android:text="@string/cancel"
                android:textColor="@color/white" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnContactConfirm"
                android:layout_width="wrap_content"
                android:layout_height="55dp"
                android:layout_below="@id/contact_card_phone"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="35dp"
                android:backgroundTint="@color/blue_primary"
                android:text="@string/confirm"
                android:textColor="@color/white" />

        </RelativeLayout>
    </androidx.cardview.widget.CardView>
    </androidx.core.widget.NestedScrollView>
</RelativeLayout>