<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingTop="15dp"
    tools:context=".Fragment.ProfileFragment">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/blue"
            app:cardCornerRadius="15dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:scrollbars="vertical"
            android:elevation="15dp">

            <TextView
                android:id="@+id/profile_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:fontFamily="@font/aladin"
                android:layout_marginTop="10dp"
                android:textSize="38sp"
                android:textColor="@color/black"
                android:text="@string/profile" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="60dp"
            android:layout_marginBottom="15dp"
            android:background="@color/white">

            <ImageView
                android:id="@+id/profile_image"
                android:layout_marginTop="15dp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/proimg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginTop="10dp"
                android:layout_marginEnd="25dp"
                android:layout_marginStart="25dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/profile_firstName"
                android:hint="@string/txt_fName"
                android:layout_below="@id/profile_image"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/person"
                    android:background="@color/light_grey"
                    android:drawablePadding="15dp"
                    android:maxLength="25"
                    android:inputType="text"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_below="@id/profile_firstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="25dp"
                android:layout_marginStart="25dp"
                android:id="@+id/profile_lastName"
                android:hint="@string/txt_lName"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/person"
                    android:background="@color/light_grey"
                    android:drawablePadding="15dp"
                    android:inputType="text"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_below="@id/profile_lastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="25dp"
                android:layout_marginStart="25dp"
                android:id="@+id/profile_email"
                android:hint="@string/txt_email"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/email"
                    android:drawablePadding="15dp"
                    android:background="@color/light_grey"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/profile_email"
                android:id="@+id/profile_phone"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="25dp"
                android:layout_marginStart="25dp"
                android:hint="@string/txt_phone"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/phone"
                    android:background="@color/light_grey"
                    android:maxLength="10"
                    android:drawablePadding="15dp"
                    android:inputType="phone"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/profile_phone"
                android:layout_marginEnd="25dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="8dp"
                android:id="@+id/profile_new_password"
                android:hint="Change Password"
                app:passwordToggleEnabled="true"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/password"
                    android:drawablePadding="15dp"
                    android:inputType="textPassword"
                    android:background="@color/light_grey"/>
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:layout_below="@id/profile_new_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="10dp"
                android:textColor="@color/blue"
                android:layout_marginTop="20dp"
                android:layout_marginStart="55dp"
                android:layout_marginBottom="55dp"
                android:layout_marginEnd="55dp"
                android:layout_gravity="center"
                android:id="@+id/btnProfile"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/confirm_changes"
                android:background="@drawable/round_buttons"/>
        </RelativeLayout>

        </androidx.cardview.widget.CardView>

    </ScrollView>

</RelativeLayout>